# ELMA-BraCat

./: .gitignore  CMakeLists.txt  README.md
analyzer/: Analyzer_EigenvaluesRouseMatrix.h  Analyzer_TopologicalProperties_Dijkstra.h
projects/: CMakeLists.txt
projects/BGRW_CreationProperties/: CMakeLists.txt  UpdaterCreatorBGRWTertiaryBondWalking_CreationProperties.h  mainCreatorBGRWTertiaryBondWalking_CreationProperties.cpp
projects/BGRW_RouseMatrix/: CMakeLists.txt  UpdaterCreatorBGRWTertiaryBondWalking.h  mainCreatorBGRWTertiaryBondWalking_RouseMatrix.cpp
projects/BarabasiAlbertRestrictedF3_Creation/: CMakeLists.txt  mainCreatorBarabasiAlbertRestrictedF3_Creator.cpp
projects/BarabasiAlbertRestrictedF3_RouseMatrix/: CMakeLists.txt  UpdaterCreatorBarabasiAlbertRestrictedF3.h  mainCreatorBarabasiAlbertRestrictedF3_RouseMatrix.cpp
projects/BarabasiAlbert_RouseMatrix/: CMakeLists.txt  UpdaterCreatorBarabasiAlbert.h  mainCreatorBarabasiAlbert_RouseMatrix.cpp
projects/ChainWalking_Analyzer_RG2/: Analyzer_ChainWalking_RG2.h  CMakeLists.txt  mainChainWalking_Analyzer_RG2.cpp
projects/CreateDendrimerGeneral_FGS/: CMakeLists.txt  UpdaterCreateDendrimerGeneral_FGS.h  mainCreateDendrimerGeneral_FGS.cpp
projects/CreatorChainWalkingTertiaryBondWalking/: CMakeLists.txt  mainCreatorChainWalkingTertiaryBondWalking.cpp
projects/CreatorChainWalkingTertiaryBondWalking_CreationProperties/: CMakeLists.txt  UpdaterCreatorChainWalkingTertiaryBondWalking_CreationProperties.h  mainCreatorChainWalkingTertiaryBondWalking_CreationProperties.cpp
projects/CreatorChainWalkingTertiaryBondWalking_RouseMatrix/: CMakeLists.txt  mainCreatorChainWalkingTertiaryBondWalking_RouseMatrix.cpp
projects/CreatorChainWalkingTertiaryBondWalking_TopologicalProperties/: CMakeLists.txt  mainCreatorChainWalkingTertiaryBondWalking_TopologicalProperties.cpp
projects/Hyperdendrimer_RouseMatrix/: CMakeLists.txt  UpdaterCreatorHyperdendrimer.h  mainCreatorHyperdendrimer_RouseMatrix.cpp
projects/Hyperstar_RouseMatrix/: CMakeLists.txt  UpdaterCreatorHyperstar.h  mainCreatorHyperstar_RouseMatrix.cpp
projects/SimpleSimulatorStandard/: mainSimpleSimulatorStandard.cpp
projects/SimpleSolventCreator/: CMakeLists.txt  mainSimpleSolventCreator.cpp
projects/SlowGrowth_RouseMatrix/: CMakeLists.txt  UpdaterCreatorSlowGrowth.h  mainCreatorSlowGrowth_RouseMatrix.cpp
updater/: UpdaterCreatorChainWalkingTertiaryBondWalking.h
utility/: Histogram1D.h
